<resources>
    <string name="app_name" translatable="false">HabitApp</string>
    <!--MAIN LAYOUT-->
    <string name="welcome">Bienvenido</string>
    <string name="register">Registrarse</string>

    <!--LOGIN-->
    <string name="login_empty_fields">Por favor, completa todos los campos</string>
    <string name="login_successful">Inicio de sesión exitoso</string>
    <string name="login_invalid_credentials">Credenciales incorrectas</string>
    <!--LOGIN LAYOUT-->
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgot_pass">He olvidado mi contraseña</string>

    <!--REGISTER-->
    <string name="register_success">Usuario registrado con éxito</string>
    <string name="register_error">Error al registrar usuario</string>
    <string name="email_already_existsç">Este email ya existe, inicia sesión o regístrate con otro</string>
    <!--REGISTER LAYOUT-->
    <string name="email" translatable="false">Email</string>

    <!--HABITSLIST-->
    <string name="confirm_deletion_title">Confirmar borrado</string>
    <string name="confirm_delete_habit">¿Estás seguro de que quieres eliminar este hábito?</string>
    <string name="exit_app_title">Salir de la aplicación</string>
    <string name="exit_app_message">¿Deseas cerrar la aplicación?</string>
    <string name="toast_progress_incremented_all">Progreso incrementado para todos los hábitos</string>
    <string name="session_close">Cierre de Sesión</string>
    <string name="session_close_confirmation">¿Está seguro de que quiere cerrar sesión?</string>
    <string name="session_closed">La sesión ha sido cerrada</string>
    <string name="habits_number">Número de Habitos</string>
    <string name="habits_total">"Total Hábitos: "</string>
    <string name="progress_0">"El progreso ya está en 0"</string>
    <string name="delete_progress">"Eliminar progreso"</string>
    <string name="delete_progress_confirmation">"¿Seguro que quiere restar uno al progreso?"</string>
    <string name="marc_all">"Confirmar marcar todos"</string>
    <string name="marc_all_confirmation">"¿Estás seguro de que quieres marcar todos los hábitos?</string>
    <string name="no_habits_to_share">"No hay hábitos para compartir."</string>
    <string name="was_uninstall">Whatsapp no instalado</string>
    <!--HABITSLIST LAYOUT-->
    <string name="progress">Progreso:</string>
    <string name="introduce_filter">Introduce el filtro</string>
    <string name="filter_by">Filtrar por: </string>
    <string name="add_habit">"Añadir hábito "</string>

    <!-- HABITS_LIST_COMPLETED LAYOUT-->
    <string name="completed_habits">Hábitos Completados</string>

    <!--LIST_ITEM_COMPLETED_HABIT LAYOUT-->
    <string name="completion_date">Fecha de completado: </string>

    <!--HABITSLIST COMPLETED-->
    <string name="user_not_loged">Usuario no autenticado.</string>
    <string name="habits_completed_not_loadede">No se pudieron cargar los hábitos completados.</string>




    <!--ADDHABIT-->
    <string name="fill_required_fields">Por favor, completa todos los campos obligatorios</string>
    <string name="habit_added_successfully">Hábito agregado con éxito</string>
    <string name="cancel_creation">Cancelar creación</string>
    <string name="exit_without_creation">¿Deseas salir sin crear el hábito?</string>
    <string name="no_0_frequency">La frecuencia no puede ser 0</string>
    <!--ADDHABIT LAYOUT-->
    <string name="habit_name">Nombre del hábito</string>
    <string name="habit_description">Descripción del hábito</string>
    <string name="frequency">Frecuencia semanal</string>
    <string name="category">Categoría</string>
    <string name="save">Guardar</string>

    <!--EDITHABIT-->
    <string name ="habit_updated_successfully">Hábito modificado con éxito</string>
    <string name ="toast_habit_not_found">" No se encontró el hábito o no pertenece al usuario actual"</string>
    <string name="register_password_invalid">La contraseña debe tener al menos 8 caracteres y contener letras y números</string>
    <string name ="cancel_edit">Cancelar edición</string>
    <string name ="leave_wo_save">¿Deseas salir sin guardar los cambios?</string>
    <string name ="toast_cant_update_habit"> No se pudo actualizar el hábito. Revisa los datos</string>
    <!--EDIT_HABIT LAYOUT-->
    <string name="edit_habit">Editar Hábito</string>

    <!--PROFILE LAYOUT-->
    <string name ="edit_pic">Editar foto</string>
    <string name ="user_name">Nombre de usuario</string>
    <string name ="change_pass">Cambiar contraseña</string>
    <string name ="my_habits">Mis hábitos</string>
    <string name ="settings">Ajustes</string>
    <string name ="image_error">Error al guardar la imagen</string>
    <string name ="image_error_intern">Error al guardar la imagen en almacenamiento interno</string>

    <!--SETTINGS-->
    <string name ="delete">Vas a eliminar</string>
    <string name ="delete_confirmation">Seguro que quieres borrar?</string>
    <!--SETTINGS LAYOUT-->
    <string name="configuracion">Configuración</string>
    <string name="language">Idioma</string>
    <string name="notifications">Notificaciones</string>
    <string name= "delete_account">Borrar cuenta</string>

    <!--PASSWORD CHANGE-->
    <string name="toast_fill_both">Por favor, complete ambos campos.</string>
    <string name="error_session">Error al obtener la sesión. Por favor, inicie sesión de nuevo.</string>
    <string name="updated_pass">Contraseña actualizada con éxito</string>
    <string name="error_updating_pass">Error al actualizar la contraseña. Inténtelo de nuevo.</string>

    <!--PASSWORD_CHANGE LAYOUT-->
    <string name="pass_now">Contraseña actual</string>
    <string name="pass_new">Contraseña nueva</string>

    <!--RECOVER PASSWORD-->
    <string name="toast_empty_email">Por favor, ingresa tu correo electrónico</string>
    <string name="toast_add_token">Por favor, ingresa el token de recuperación</string>
    <string name="toast_email_not_valid">Correo electrónico no válido</string>
    <string name="token_checked">Token verificado, ahora ingresa tu nueva contraseña</string>
    <string name="please_new_pass">Por favor, ingresa una nueva contraseña</string>
    <string name="pass_6">La contraseña debe tener al menos 6 caracteres</string>
    <string name="pass_updated">Contraseña actualizada correctamente</string>
    <string name="invalid_token">Token incorrecto, inténtelo nuevamente</string>
    <string name="token_number">El token debe ser un número válido</string>
    <string name="check_email">Error al actualizar la contraseña. Verifica el correo.</string>
    <!--SEND_TOKEN LAYOUT-->
    <string name="introduce_email">Ingrese su correo electrónico: </string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="send_token">Enviar token</string>

    <!--RECOVER_PASSWORD LAYOUT-->
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="recovery_token">Token de recuperación</string>
    <string name="confirm">Confirmar</string>

    <!--NOTIFICACIONES-->
    <string name="channel_name" translatable="false">canal</string>
    <string name="channel_description" translatable="false">canal</string>

    <!--PROFILE LAYOUT-->
    <string name="profile">Mi perfil</string>

    <!-- HABIT OPTIONS-->
    <string-array name="habit_options">
        <item>Nutrición</item>
        <item>Productividad</item>
        <item>Salud</item>
        <item>Deporte</item>
        <item>Estudio</item>
        <item>Finanzas</item>
        <item>Salud mental</item>
        <item>Otros</item>
    </string-array>

    <!--HABIT FILTER-->
    <string-array name="habit_filter">
        <item>Nombre</item>
        <item>Categoría</item>
        <item>Completado</item>
        <item>En progreso</item>
    </string-array>

    <!--BOTONES-->
    <string name="yes">Sí</string>
    <string name="no">No</string>

        <string-array name="language_options">
            <item>Español</item>
            <item>Inglés</item>
            <item>Galego</item>
        </string-array>


</resources>