<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEditHabitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/edit_habit"
            android:textColor="#FE9167"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edtHabitName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/habit_name"
            android:inputType="text"
            android:textColor="#A3A0B2"
            android:textColorHint="#A3A0B2" />

        <EditText
            android:id="@+id/edtHabitDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/habit_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textColor="#A3A0B2"
            android:textColorHint="#A3A0B2" />

        <EditText
            android:id="@+id/edtHabitFrequency"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/frequency"
            android:inputType="number"
            android:textColor="#A3A0B2"
            android:textColorHint="#A29FB1" />

        <Spinner
            android:id="@+id/spHabitCategory"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:entries="@array/habit_options"
            android:text="@string/category"
            android:backgroundTint="#191919"
            android:background="@android:color/black"
            android:popupTheme="@style/SpinnerDropdownTextStyle"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerTextStyle"/>

        <Button
            android:id="@+id/btnSaveHabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FE9167"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>
