<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    android:backgroundTint="#191919"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/tvRecoverPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/recover_password"
        android:textColor="#FE9167"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Campo para el correo electrónico -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#A3A0B2"
        android:textColorHint="#A3A0B2" />

    <!-- Campo para el token -->
    <EditText
        android:id="@+id/etToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/recovery_token"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#A3A0B2"
        android:textColorHint="#A3A0B2" />

    <!-- Campo para la nueva contraseña -->
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:hint="@string/pass_new"
        android:inputType="textPassword"
        android:padding="12dp"
        android:visibility="gone" /> <!-- Inicialmente oculto -->

    <!-- Botón para confirmar -->
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FE9167"
        android:padding="12dp"
        android:text="Confirmar"
        android:textColor="@android:color/white" />
</LinearLayout>
