<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#191919"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Información del hábito -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nombre del hábito -->
        <TextView
            android:id="@+id/tvHabitName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/habit_name"
            android:textColor="#FE9167"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Categoría -->
        <TextView
            android:id="@+id/tvHabitCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/category"
            android:textColor="#A3A0B2"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Fechas -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Fecha de completado -->
        <TextView
            android:id="@+id/tvCompletionDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity=""
            android:text="@string/completion_date"
            android:textColor="#A3A0B2"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
